--- a/portfolio.css
+++ b/portfolio.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 h1 {
-	background-color: blue;
+	background-image: url("modern-blue-halftone-banner-background.jpg");
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 	color: white;
 	font-size: 100px;
