--- a/portfolio.css
+++ b/portfolio.css
@@ -12,3 +12,19 @@ h1 {
 footer{
 	text-align: center;
 }
+
+
+h2{
+	font-weight: bold;
+	font-size: 50px;
+}
+
+h3{
+	font-weight: bold;
+	font-size: 50px;
+}
+
+h4{
+	font-weight: bold;
+	font-size: 50px;
+}
