--- a/portfolio.css
+++ b/portfolio.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 h1 {
-	background-image: url("image.jpg");
+	background-color: blue;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 	color: white;
 	font-size: 40px;
