--- a/portfolio.css
+++ b/portfolio.css
@@ -2,9 +2,8 @@
 /* CSS Document */
 
 h1 {
-	background-color: blue;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
-	color: white;
+	color: black;
 	font-size: 40px;
 	text-align: center;
 }
@@ -27,4 +26,54 @@ h3{
 h4{
 	font-weight: bold;
 	font-size: 30px;
+}
+
+
+@keyframes glitch {
+	2%,64% {
+		transform: translate(2px, 0) skew(0deg);
+	}
+	4%,60% {
+		transform: translate(-2px, 0) skew(0deg);
+	}
+	6%,58% {
+		transform: translate(2px, 0) skew(0deg);
+	}
+	8%,56% {
+		transform: translate(-2px, 0) skew(0deg);
+	}
+	10%,54% {
+		transform: translate(2px, 0) skew(0deg);
+	}
+}
+
+.glitch {
+	position: relative;
+	color: white;
+	font-size: 2em;
+	letter-spacing: 2px;
+}
+
+.glitch::before,
+.glitch::after {
+	content: attr(data-text);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.glitch::before {
+	left: 2px;
+	text-shadow: -2px 0 red;
+	color: black;
+	animation: glitch 1.5s infinite;
+}
+
+.glitch::after {
+	left: -2px;
+	text-shadow: -2px 0 blue;
+	color: black;
+	animation: glitch 1s infinite;
 }
